ui.frontend/src/main/webpack/etisalat/styles/custom-components/news-room.scss
.cmp-newsroom-search {
  .form.wst-form .form-group .select2-container.select2-container--open {
    &.select2-container--open {
      .select2-dropdown {
        margin-left: 3px;
      }
    }
  }

  .floating-label {
    margin-left: 3px;
  }
  .tile-boxes-section {
    padding-top: toRem(80);
    padding-bottom: toRem(75);
    @include font-family-lato;

    @include respond-to-min($tablet) {
      padding-left: 0px !important;
    }

    position: relative;
    overflow: hidden;

    .swiper-scrollbar {
      bottom: 0 !important;
    }

    .swiper-scrollbar-drag {
      //background-color: $grey-brass;
      background: #719e19;
    }

    .swiper-wrapper {
      display: block !important;
    }

    @media (max-width: 991px) {
      .swiper-wrapper .swiper-slide {
        padding-left: 0rem !important;
        padding-right: 0;
      }

      .tile-boxes-section {
        padding: 1.5rem !important;
      }
    }
  }

  .tile-box-tile {
    min-height: 280px;
    overflow: hidden;
    background: $white;
    border-radius: 4px;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
    position: relative;
    width: 100%;
    margin-bottom: 2rem;

    // @media (min-width: @screen-md)
    @include respond-to-min($tablet) {
      min-height: 440px;
      max-height: 440px;
    }

    .img-cover {
      height: 130px;
      position: relative;
      overflow: hidden;
      border-radius: 4px 4px 0 0;

      @include respond-to-min($tablet) {
        height: 225px;
      }
    }

    .tile-box-body {
      text-align: left;
      padding: 1.5rem;
      padding-bottom: 3rem;

      @include respond-to-min($tablet) {
        padding-bottom: 1.5rem;
      }

      h2 {
        font-size: $font18;
        line-height: 24px;
        color: $almost-black;
        margin: 0;
        margin-bottom: 0.5rem;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        @include respond-to-min($tablet) {
          font-size: $font28;
          line-height: 35px;
          margin-bottom: 1rem;
        }
      }

      p {
        color: $steel-grey;
        font-size: $font14;
        line-height: 20px;

        @include respond-to-min($tablet) {
          //font-size: 1rem;
          line-height: 22px;
        }
      }

      .annoucements {
        color: #909090;
        @include font-family-lato;
        font-size: $font12;
        letter-spacing: 4px;
        line-height: 12px;
        text-transform: uppercase;
        margin-bottom: 0.5rem;
        margin-top: 0;
      }

      .annoucement-date {
        color: $steel-grey;
        @include font-family-lato;
        font-size: $font14;
        line-height: 20px;
        margin-bottom: 1rem;
        display: block;
      }
    }

    .btn-text {
      position: absolute;
      bottom: 1.5rem;
      left: 1.5rem;
      letter-spacing: 2px;
      font-size: $font12;

      @include respond-to-min($tablet) {
        font-size: $font14;

        &:before {
          padding: 3.5px;
          right: -20px;
          @include rtlBlock() {
            right: auto;
            transform: translateY(-50%) rotate(135deg);
            left: toRem(-12);
          }
        }
      }
    }
  }

  .select2-dropdown {
    width: 18.6rem;

    @include respond-to-min($tablet) {
      width: 45.5rem;
    }

    @media only screen and (min-width: 375px) and (max-width: 812px) and (orientation: landscape) {
      width: 45.3rem;
    }

    @media screen and (min-width: 993px) {
      width: 13.8rem;
    }

    @include respond-to-min($desktop-wide) {
      width: 16.9rem;
    }
    .select2-results {
      .select2-results__options {
        direction: rtl;
        li {
          font-size: $font16;
        }
      }
    }
  }
  .select2-container--default .select2-selection--single {
    border: 0;
    border-bottom: 1px solid $grey-select;
    height: 2.5rem;
    border-radius: 0;
    outline: 0;
    .select2-selection__arrow {
      top: toRem(20)!important;
  }
  }
  .select2-container--default .select2-selection--single .select2-selection__rendered {
    color: #444;
    line-height: toRem(28);
    padding-left: 0;
    font-size: $font20;
    height: toRem(40);
    line-height: toRem(40);
    display: block;
    padding-left: toRem(8);
    padding-right: toRem(20);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  .select2-selection__arrow {
    width: toRem(20);
    height: toRem(26);
    background: url("../resources/images/icon-arrow-black-2px.svg") no-repeat;
    border-color: transparent;
    border-width: 0;
    background-size: toRem(20);
    background-position: 50%;
    border-style: solid;
    margin-left: toRem(-4);
    margin-top: toRem(-9.6);
    position: absolute;
    top: 50%;
  }
  .select2-container.select2-container--open .select2-selection .select2-selection__arrow {
    transform: rotate(180deg);
  }
  .input-field label.floating-label {
    top: 0 !important;
    left: toRem(12);
    line-height: toRem(24);
    transform: translateY(-10px) scale(.8);
    transform-origin: 0 0;
    font-size: $font16!important;
    z-index: 2;
    top: 0!important;
    color: #353738!important;
    position: absolute;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-weight: get-font-weight("regular")!important;
  }
}

//for HBH
@media (max-width: 550px) {
  .business {
    .tile-box-tile {
      .img-cover {
        img {
          &.cover {
            min-width: 70%;
            height: auto;
          }
        }
      }
    }
  }
}

@media (max-width: 390px) {
  .business {
    .tile-box-tile {
      .img-cover {
        img {
          &.cover {
            min-width: 80%;
            height: auto;
          }
        }
      }
    }
  }
}
/* ... */

